--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -70,7 +70,7 @@
         
       ]
     },
-  "projects": {
+"projects": {
       "mariFarma": {
         "name": "Online Store",
         "description": "This project is a website called MariFarma, providing information and access to various health and wellness products. It offers categories such as Medications, Natural Care, Herbs, and Orthopedics. The website features functionalities like language selection, product search, and adding products to favorites and the shopping cart."
@@ -84,10 +84,34 @@
         "description": "This website was created by students of the Peñascal F5 bootcamp for educational purposes. The entire project was developed in an estimated time of 2 weeks. The group was organized and worked with agile methodologies, organizing the group with its corresponding Scrum and Product Owner."
       }
     },
-    "about":{
+"about":{
       "intro":"Introduction",
       "overview":"Overview.",
       "whoami":"I am a software developer with experience in TypeScript and JavaScript, and specialized in frameworks such as React, Node.js, and Three.js. I am a fast learner and collaborate closely with the team to create efficient, scalable, and user-friendly solutions that solve real-world problems."
-    }
+    },
+"works": {
+    "sectionSubText": "My work",
+    "sectionHeadText": "Projects.",
+    "description": "These are some of the projects I have developed during my participation in a fullstack bootcamp. Each of them exemplifies my skills and experience in action, showing how I have applied my knowledge in real-world situations. For each project, I will provide a brief description along with links to code repositories and live demos. These projects are proof of my ability to tackle complex challenges, adapt to various technologies, and effectively manage projects. I am excited to share my work with you!"
+    },
+"feedback":{
+  "sectionSubText":"What others say",
+  "sectionHeadText":"Testimonials"
+},
+"contact": {
+    "subText": "Contact Me",
+    "headText": "Contact.",
+    "nameLabel": "Your Name",
+    "namePlaceholder": "What's your name?",
+    "emailLabel": "Your Email",
+    "emailPlaceholder": "What's your email?",
+    "messageLabel": "Your Message",
+    "messagePlaceholder": "What would you like to say?",
+    "send": "Send",
+    "sending": "Sending...",
+    "success": "Thank you. I will get back to you as soon as possible.",
+    "error": "Oops, something went wrong! Please try again."
+}
+
 }
   
